SFDC Automation/src/objects/Ryder_CSC_Surveys__c.object
<CustomObject>
    <fields>
        <fullName>Account_Mgr_Satisfaction__c</fullName>
        <description>Satisfaction with the Current Relationship with your account manager</description>
        <inlineHelpText>Satisfaction with the Current Relationship with your account manager</inlineHelpText>
        <label>Account Mgr Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Ryder CSC Surveys</relationshipLabel>
        <relationshipName>Ryder_CSC_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ryder CSC Surveys</relationshipLabel>
        <relationshipName>Ryder_CSC_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer / Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Ryder CSC Surveys</relationshipLabel>
        <relationshipName>Ryder_CSC_Surveys_CB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dissatisfaction_addressed__c</fullName>
        <label>Dissatisfaction addressed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Failed_Survey__c</fullName>
        <formula>if ( Survey_Score__c   &lt; 100, &apos;True&apos;, &apos;False&apos;)</formula>
        <label>Failed Survey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_about_the_agent__c</fullName>
        <description>used by pilot survey</description>
        <label>Feedback about the agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_as_to_why_call_wasnt_resolve__c</fullName>
        <description>used by pilot survey</description>
        <label>Feedback as to why call wasnt resolved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_as_to_why_issue_wasnt_addressed__c</fullName>
        <description>used by Pilot survey</description>
        <label>Feedback as to why issue wasnt addressed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_on_likelihood_to_call__c</fullName>
        <description>used by pilot survey</description>
        <label>Feedback on likelihood to call</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Account_Manager_Contacted__c</fullName>
        <label>Has Account Manager Contacted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_satisfied_are_you_with_the_agent__c</fullName>
        <description>used by pilot survey</description>
        <label>How satisfied are you with the agent?</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_calling_again__c</fullName>
        <description>Used by Pilot survey</description>
        <label>Likelihood of calling again</label>
        <picklist>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Likely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ryder_Follow_up_Survey__c</fullName>
        <label>Ryder Follow-up Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Satisfaction_With_Current_Relationship__c</fullName>
        <label>Satisfaction With Current Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfied_with_outcome__c</fullName>
        <label>Satisfied with outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Printable_Link__c</fullName>
        <label>Survey Printable Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <description>This score is calculated in a trigger for each survey.</description>
        <label>Survey Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Submission_Date__c</fullName>
        <label>Survey Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_to_contact_you__c</fullName>
        <label>Time to contact you</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_your_call_resolved__c</fullName>
        <label>Was your call resolved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_your_issue_addressed__c</fullName>
        <description>used by pilot survey</description>
        <label>Was your issue addressed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_can_Ryder_do_to_serve_you_better__c</fullName>
        <label>What can Ryder do to serve you better</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_can_Ryder_do_to_solve_the_situation__c</fullName>
        <label>What can Ryder do to solve the situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Ryder CSC Survey</label>
    <nameField>
        <displayFormat>RCSCS-{00000}-{mmddyy}</displayFormat>
        <label>Ryder CSC Survey Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ryder CSC Surveys</pluralLabel>
    <recordTypes>
        <fullName>Customer_360_Follow_Up</fullName>
        <active>true</active>
        <label>Customer 360 Follow Up</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pilot_Survey</fullName>
        <active>true</active>
        <label>Pilot Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>